--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -3,7 +3,6 @@ html{
 }
 
 body{
-    background: $dark-blue;
     font-family: Arial, Helvetica, sans-serif;
     font-size: $m-size;
 }
@@ -12,4 +11,7 @@ button{
 }
 button:disabled{
     cursor: default;
+}
+.is-active{
+    font-weight: bold;
 }
