--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,4 +1,7 @@
-$s-size:1.2rem;
-$m-size:1.6rem;
-$l-size:3.2rem;
-$x-size:4.8rem;
+// Colors
+// Spacing
+$s-size: 1.2rem;
+$m-size: 1.6rem;
+$l-size: 3.2rem;
+$xl-size: 4.8rem;
+$desktop-breakpoint: 45rem;
